kubernetes-templating/frontend/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-socks-shop
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - shop.35.224.184.153.sslip.io
    secretName: shop.35.224.184.153.sslip.io
  rules:
  - host: shop.35.224.184.153.sslip.io
    http:
      paths:
      - backend:
          serviceName: front-end
          servicePort: 80
